---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2020-11-11
  Bugfixes:
    - military things
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2020-11-11
  Bugfixes:
    - event protocol
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2020-11-11
  Features:
    - explicit selector 
  Changes:
    - event protocol
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2020-11-11
  Bugfixes:
    - localisation was missing
  Changes:
    - history class
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2020-11-10
  Features:
    - inital release